--- a/roulette/core/templates/core/idea_list.html
+++ b/roulette/core/templates/core/idea_list.html
@@ -1,6 +1,6 @@
 <ul>
 {% for idea in idea_list %}
-    <li><a href="/core/{{ idea.id }}/">{{ idea.name }}</a></li>
+    <li><a href="/core/ideas/{{ idea.id }}/">{{ idea.name }}</a></li>
 {% empty %}
     <li>No ideas.</li>
 {% endfor %}
