--- a/roulette/core/templates/core/language_list.html
+++ b/roulette/core/templates/core/language_list.html
@@ -1,6 +1,6 @@
 <ul>
 {% for language in language_list %}
-    <li><a href="/core/languages/{{ language.id }}/">{{ language.name }}</a></li>
+    <li><a href="{% url 'core:language' language.id %}">{{ language.name }}</a></li>
 {% empty %}
     <li>No languages.</li>
 {% endfor %}
