--- a/roulette/core/templates/core/form.html
+++ b/roulette/core/templates/core/form.html
@@ -1,5 +1,16 @@
+{% load bootstrap3 %}
+
+{% bootstrap_css %}
+{% bootstrap_javascript %}
+
+{% bootstrap_messages %}
+
 <form method="post">
     {% csrf_token %}
-    {{ form }}
-    <input type="submit" value="Submit"/>
+    {% bootstrap_form form %}
+    {% buttons %}
+    <button type="submit" class="btn btn-primary">
+    Submit
+    </button>
+    {% endbuttons %}
 </form>
