--- a/roulette/core/templates/core/idea_list.html
+++ b/roulette/core/templates/core/idea_list.html
@@ -1,3 +1,10 @@
+{% load bootstrap3 %}
+
+{% bootstrap_css %}
+{% bootstrap_javascript %}
+
+{% bootstrap_messages %}
+
 <ul>
 {% for idea in idea_list %}
     <li><a href="{% url 'core:idea' idea.id %}"/>{{ idea.name }}</a></li>
