--- a/roulette/core/templates/core/language_list.html
+++ b/roulette/core/templates/core/language_list.html
@@ -5,6 +5,9 @@
 
 {% bootstrap_messages %}
 
+{% url 'core:index' as back %}
+{% bootstrap_button content='Back' button_type='link' href=back %}
+
 <ul>
 {% for language in language_list %}
     <li><a href="{% url 'core:language' language.id %}">{{ language.name }}</a></li>
