--- a/roulette/core/templates/core/form.html
+++ b/roulette/core/templates/core/form.html
@@ -5,7 +5,7 @@
 
 {% bootstrap_messages %}
 
-<form method="post">
+<form enctype="multipart/form-data" method="post">
     {% csrf_token %}
     {% bootstrap_form form %}
     {% buttons %}
