--- a/roulette/core/templates/core/idea_detail.html
+++ b/roulette/core/templates/core/idea_detail.html
@@ -6,11 +6,11 @@
 {% bootstrap_messages %}
 
 {% url 'core:ideas' as back %}
-{% url 'core:idea-update' as update %}
-{% url 'core:idea-delete' as delete %}
+{% url 'core:idea-update' idea.id as update %}
+{% url 'core:idea-delete' idea.id as delete %}
 {% bootstrap_button content='Back' button_type='link' href=back %}
 {% bootstrap_button content='Update' button_type='link' href=update %}
-{% bootstrap_button content='Delete' button_type='link' href=update %}
+{% bootstrap_button content='Delete' button_type='link' href=delete %}
 
 <h1>{{ idea.name }}</h1>
 <img src="{{ idea.thumbnail.url }}">
