--- a/roulette/core/templates/core/project_detail.html
+++ b/roulette/core/templates/core/project_detail.html
@@ -6,10 +6,10 @@
 {% bootstrap_messages %}
 
 {% url 'core:projects' as back %}
-{% url 'core:project-update' as update %}
-{% url 'core:idea-delete' as delete %}
+{% url 'core:project-update' project.id as update %}
+{% url 'core:idea-delete' project.id as delete %}
 {% bootstrap_button content='Back' button_type='link' href=back %}
 {% bootstrap_button content='Update' button_type='link' href=update %}
-{% bootstrap_button content='Delete' button_type='link' href=update %}
+{% bootstrap_button content='Delete' button_type='link' href=delete %}
 
 <h1>{{ project.name }}</h1>
