Make thumnails only display if they exist

--- a/roulette/core/templates/core/idea_detail.html
+++ b/roulette/core/templates/core/idea_detail.html
@@ -13,4 +13,7 @@
 {% bootstrap_button content='Delete' button_type='link' href=delete %}
 
 <h1>{{ idea.name }}</h1>
+
+{% if idea.thumbnail %}
 <img src="{{ idea.thumbnail.url }}">
+{% endif %}
