--- a/roulette/core/templates/core/project_list.html
+++ b/roulette/core/templates/core/project_list.html
@@ -6,7 +6,7 @@
 {% bootstrap_messages %}
 
 {% url 'core:index' as back %}
-{% url 'core:idea-add' as add %}
+{% url 'core:project-add' as add %}
 {% bootstrap_button content='Back' button_type='link' href=back %}
 {% bootstrap_button content='Add' button_type='link' href=add %}
 
