--- a/roulette/core/templates/core/language_list.html
+++ b/roulette/core/templates/core/language_list.html
@@ -10,10 +10,10 @@
 {% bootstrap_button content='Back' button_type='link' href=back %}
 {% bootstrap_button content='Add' button_type='link' href=add %}
 
-<ul>
+<div class="list-group">
 {% for language in language_list %}
-    <li><a href="{% url 'core:language' language.id %}">{{ language.name }}</a></li>
+    <a class="list-group-item" href="{% url 'core:language' language.id %}"/>{% if language.thumbnail %}<img src="{{ language.thumbnail.url }}" alt="thumb" height="100" width="100" class="img-thumbnail">{% endif %} {{ language.name }}</a>
 {% empty %}
-    <li>No languages.</li>
+    <div>No languages.</div>
 {% endfor %}
-</ul>
+</div>
