--- a/roulette/core/templates/core/project_list.html
+++ b/roulette/core/templates/core/project_list.html
@@ -10,10 +10,10 @@
 {% bootstrap_button content='Back' button_type='link' href=back %}
 {% bootstrap_button content='Add' button_type='link' href=add %}
 
-<ul>
+<div class="list-group">
 {% for project in project_list %}
-    <li><a href="{% url 'core:project' project.id %}">{{ project.name }}</a></li>
+    <a class="list-group-item" href="{% url 'core:project' project.id %}"/>{% if project.thumbnail %}<img src="{{ project.thumbnail.url }}" alt="thumb" height="100" width="100" class="img-thumbnail">{% endif %} {{ project.name }}</a>
 {% empty %}
-    <li>No projects.</li>
+    <div>No projects.</div>
 {% endfor %}
-</ul>
+</div>
