--- a/roulette/core/templates/core/project_detail.html
+++ b/roulette/core/templates/core/project_detail.html
@@ -12,4 +12,8 @@
 {% bootstrap_button content='Update' button_type='link' href=update %}
 {% bootstrap_button content='Delete' button_type='link' href=delete %}
 
+<br>
+
 <h1>{{ project.name }}</h1>
+
+<p>{{ project.description }}</p>
