--- a/roulette/core/templates/core/language_detail.html
+++ b/roulette/core/templates/core/language_detail.html
@@ -12,7 +12,12 @@
 {% bootstrap_button content='Update' button_type='link' href=update %}
 {% bootstrap_button content='Delete' button_type='link' href=delete %}
 
-<h1>{{ language.name }}</h1>
+<br>
+
 {% if language.thumbnail %}
-<img src="{{ language.thumbnail.url }}">
+<img src="{{ language.thumbnail.url }}" alt="thumb" height="500" width="500" class="img-thumbnail">
 {% endif %}
+
+<h1>{{ language.name }}</h1>
+
+<p>{{ langauge.description }}</p>
