Update home page

--- a/roulette/core/templates/core/index.html
+++ b/roulette/core/templates/core/index.html
@@ -5,7 +5,7 @@
 
 {% bootstrap_messages %}
 
-<h1>Home</h1>
+<h1>Roulette</h1>
 
 {% url 'core:languages' as languages %}
 {% url 'core:ideas' as ideas %}
