Update to nicer buttons

--- a/roulette/core/templates/core/index.html
+++ b/roulette/core/templates/core/index.html
@@ -11,6 +11,6 @@
 {% url 'core:ideas' as ideas %}
 {% url 'core:projects' as projects %}
 
-{% bootstrap_button content='Languages' button_type='link' href=languages %}
-{% bootstrap_button content='Ideas' button_type='link' href=ideas %}
-{% bootstrap_button content='Projects' button_type='link' href=projects %}
+{% bootstrap_button content='Languages' button_type='link' button_class='btn-primary' href=languages %}
+{% bootstrap_button content='Ideas' button_type='link' button_class='btn-primary' href=ideas %}
+{% bootstrap_button content='Projects' button_type='link' button_class='btn-primary' href=projects %}
