--- a/roulette/core/templates/core/idea_detail.html
+++ b/roulette/core/templates/core/idea_detail.html
@@ -8,9 +8,9 @@
 {% url 'core:ideas' as back %}
 {% url 'core:idea-update' idea.id as update %}
 {% url 'core:idea-delete' idea.id as delete %}
-{% bootstrap_button content='Back' button_type='link' href=back %}
-{% bootstrap_button content='Update' button_type='link' href=update %}
-{% bootstrap_button content='Delete' button_type='link' href=delete %}
+{% bootstrap_button content='Back' button_type='link' button_class='btn-primary' href=back %}
+{% bootstrap_button content='Update' button_type='link' button_class='btn-primary' href=update %}
+{% bootstrap_button content='Delete' button_type='link' button_class='btn-primary' href=delete %}
 
 <br>
 
