--- a/roulette/core/templates/core/language_detail.html
+++ b/roulette/core/templates/core/language_detail.html
@@ -8,9 +8,9 @@
 {% url 'core:languages' as back %}
 {% url 'core:language-update' language.id as update %}
 {% url 'core:language-delete' language.id as delete %}
-{% bootstrap_button content='Back' button_type='link' href=back %}
-{% bootstrap_button content='Update' button_type='link' href=update %}
-{% bootstrap_button content='Delete' button_type='link' href=delete %}
+{% bootstrap_button content='Back' button_type='link' button_class='btn-primary' href=back %}
+{% bootstrap_button content='Update' button_type='link' button_class='btn-primary' href=update %}
+{% bootstrap_button content='Delete' button_type='link' button_class='btn-primary' href=delete %}
 
 <br>
 
