--- a/roulette/core/templates/core/project_detail.html
+++ b/roulette/core/templates/core/project_detail.html
@@ -8,9 +8,9 @@
 {% url 'core:projects' as back %}
 {% url 'core:project-update' project.id as update %}
 {% url 'core:project-delete' project.id as delete %}
-{% bootstrap_button content='Back' button_type='link' href=back %}
-{% bootstrap_button content='Update' button_type='link' href=update %}
-{% bootstrap_button content='Delete' button_type='link' href=delete %}
+{% bootstrap_button content='Back' button_type='link' button_class='btn-primary' href=back %}
+{% bootstrap_button content='Update' button_type='link' button_class='btn-primary' href=update %}
+{% bootstrap_button content='Delete' button_type='link' button_class='btn-primary' href=delete %}
 
 <br>
 
