--- a/roulette/core/templates/core/project_list.html
+++ b/roulette/core/templates/core/project_list.html
@@ -7,8 +7,8 @@
 
 {% url 'core:index' as back %}
 {% url 'core:project-add' as add %}
-{% bootstrap_button content='Back' button_type='link' href=back %}
-{% bootstrap_button content='Add' button_type='link' href=add %}
+{% bootstrap_button content='Back' button_type='link' button_class='btn-primary' href=back %}
+{% bootstrap_button content='Add' button_type='link' button_class='btn-primary' href=add %}
 
 <div class="list-group">
 {% for project in project_list %}
