--- a/roulette/core/templates/core/project_detail.html
+++ b/roulette/core/templates/core/project_detail.html
@@ -14,6 +14,24 @@
 
 <br>
 
+<div class="container">
+    <div class="row">
+        <div class="col">
+            {% if project.idea.thumbnail %}
+            <img src="{{ project.idea.thumbnail.url }}" alt="thumb" height="500" width="500" class="img-thumbnail">
+            {% endif %}
+        </div>
+        <div class="col-1">
+            <font size="400">+</font>
+        </div>
+        <div class="col">
+            {% if project.language.thumbnail %}
+            <img src="{{ project.language.thumbnail.url }}" alt="thumb" height="500" width="500" class="img-thumbnail">
+            {% endif %}
+        </div>
+    </div>
+</div>
+
 <h1>{{ project.name }}</h1>
 
 <p>{{ project.description }}</p>
