Make back buttons more clear

--- a/roulette/core/templates/core/language_detail.html
+++ b/roulette/core/templates/core/language_detail.html
@@ -5,10 +5,10 @@
 
 {% bootstrap_messages %}
 
-{% url 'core:languages' as back %}
+{% url 'core:languages' as languages %}
 {% url 'core:language-update' language.id as update %}
 {% url 'core:language-delete' language.id as delete %}
-{% bootstrap_button content='Back' button_type='link' button_class='btn-primary' href=back %}
+{% bootstrap_button content='Languages' button_type='link' button_class='btn-primary' href=languages %}
 {% bootstrap_button content='Update' button_type='link' button_class='btn-primary' href=update %}
 {% bootstrap_button content='Delete' button_type='link' button_class='btn-primary' href=delete %}
 
