--- a/roulette/core/templates/core/idea_detail.html
+++ b/roulette/core/templates/core/idea_detail.html
@@ -5,10 +5,10 @@
 
 {% bootstrap_messages %}
 
-{% url 'core:ideas' as back %}
+{% url 'core:ideas' as ideas %}
 {% url 'core:idea-update' idea.id as update %}
 {% url 'core:idea-delete' idea.id as delete %}
-{% bootstrap_button content='Back' button_type='link' button_class='btn-primary' href=back %}
+{% bootstrap_button content='Ideas' button_type='link' button_class='btn-primary' href=ideas %}
 {% bootstrap_button content='Update' button_type='link' button_class='btn-primary' href=update %}
 {% bootstrap_button content='Delete' button_type='link' button_class='btn-primary' href=delete %}
 
