Add protections around optional urls

--- a/roulette/core/templates/core/language_detail.html
+++ b/roulette/core/templates/core/language_detail.html
@@ -21,3 +21,7 @@
 <h1>{{ language.name }}</h1>
 
 <p>{{ langauge.description }}</p>
+
+{% if language.url %}
+<a href="{{ language.url }}">More...</a>
+{% endif %}
