--- a/roulette/core/templates/core/language_detail.html
+++ b/roulette/core/templates/core/language_detail.html
@@ -20,7 +20,7 @@
 
 <h1>{{ language.name }}</h1>
 
-<p>{{ langauge.description }}</p>
+<p>{{ language.description }}</p>
 
 {% if language.url %}
 <a href="{{ language.url }}">More...</a>
