Update image rendering

--- a/roulette/core/templates/core/idea_detail.html
+++ b/roulette/core/templates/core/idea_detail.html
@@ -15,7 +15,7 @@
 <br>
 
 {% if idea.thumbnail %}
-<img src="{{ idea.thumbnail.url }}" alt="thumb" height="500" width="500" class="img-thumbnail">
+<img src="{{ idea.thumbnail.url }}" alt="thumb" height="500" width="500" class="rounded">
 {% endif %}
 
 <h1>{{ idea.name }}</h1>
