--- a/roulette/core/templates/core/language_detail.html
+++ b/roulette/core/templates/core/language_detail.html
@@ -15,7 +15,7 @@
 <br>
 
 {% if language.thumbnail %}
-<img src="{{ language.thumbnail.url }}" alt="thumb" height="500" width="500" class="img-thumbnail">
+<img src="{{ language.thumbnail.url }}" alt="thumb" height="500" width="500" class="rounded">
 {% endif %}
 
 <h1>{{ language.name }}</h1>
