Add status to home page

--- a/roulette/core/templates/core/index.html
+++ b/roulette/core/templates/core/index.html
@@ -14,3 +14,13 @@
 {% bootstrap_button content='Languages' button_type='link' button_class='btn-primary' href=languages %}
 {% bootstrap_button content='Ideas' button_type='link' button_class='btn-primary' href=ideas %}
 {% bootstrap_button content='Projects' button_type='link' button_class='btn-primary' href=projects %}
+
+<br>
+<br>
+<p> Coming soon...<br>
+User accounts<br>
+Validated submissions<br>
+Randomly generated project requirements<br>
+Nicer pages<br>
+And more!<br>
+</p>
