--- a/roulette/core/templates/core/index.html
+++ b/roulette/core/templates/core/index.html
@@ -22,6 +22,6 @@ User accounts<br>
 Validated submissions<br>
 Randomly generated project requirements<br>
 Nicer pages<br>
-Embedded GitHub Views<br>
+Embedded GitHub views<br>
 And more!<br>
 </p>
