--- a/roulette/core/templates/core/form.html
+++ b/roulette/core/templates/core/form.html
@@ -1,9 +1,6 @@
 {% load bootstrap4 %}
 
-{% bootstrap_css %}
-{% bootstrap_javascript %}
-
-{% bootstrap_messages %}
+{% include 'core/header.html' only %}
 
 <form enctype="multipart/form-data" method="post">
     {% csrf_token %}
@@ -14,3 +11,5 @@
     </button>
     {% endbuttons %}
 </form>
+
+{% include 'core/footer.html' %}
