--- a/roulette/core/templates/core/idea_detail.html
+++ b/roulette/core/templates/core/idea_detail.html
@@ -1,9 +1,6 @@
 {% load bootstrap4 %}
 
-{% bootstrap_css %}
-{% bootstrap_javascript %}
-
-{% bootstrap_messages %}
+{% include 'core/header.html' only %}
 
 {% url 'core:ideas' as ideas %}
 {% url 'core:idea-update' idea.id as update %}
@@ -25,3 +22,5 @@
 {% if idea.url %}
 <a href="{{ idea.url }}">More...</a>
 {% endif %}
+
+{% include 'core/footer.html' %}
