--- a/roulette/core/templates/core/language_detail.html
+++ b/roulette/core/templates/core/language_detail.html
@@ -1,9 +1,6 @@
 {% load bootstrap4 %}
 
-{% bootstrap_css %}
-{% bootstrap_javascript %}
-
-{% bootstrap_messages %}
+{% include 'core/header.html' only %}
 
 {% url 'core:languages' as languages %}
 {% url 'core:language-update' language.id as update %}
@@ -25,3 +22,5 @@
 {% if language.url %}
 <a href="{{ language.url }}">More...</a>
 {% endif %}
+
+{% include 'core/footer.html' %}
