--- a/roulette/core/templates/core/language_list.html
+++ b/roulette/core/templates/core/language_list.html
@@ -1,9 +1,6 @@
 {% load bootstrap4 %}
 
-{% bootstrap_css %}
-{% bootstrap_javascript %}
-
-{% bootstrap_messages %}
+{% include 'core/header.html' with page='languages' only %}
 
 {% url 'core:index' as home %}
 {% url 'core:language-add' as add %}
@@ -17,3 +14,5 @@
     <div>No languages.</div>
 {% endfor %}
 </div>
+
+{% include 'core/footer.html' %}
