--- a/roulette/core/templates/core/project_detail.html
+++ b/roulette/core/templates/core/project_detail.html
@@ -1,9 +1,6 @@
 {% load bootstrap4 %}
 
-{% bootstrap_css %}
-{% bootstrap_javascript %}
-
-{% bootstrap_messages %}
+{% include 'core/header.html' only %}
 
 {% url 'core:projects' as projects %}
 {% url 'core:project-update' project.id as update %}
@@ -45,3 +42,5 @@
 <p>{{ project.description }}</p>
 
 <a href={{ project.github_url }}>GitHub</a>
+
+{% include 'core/footer.html' %}
