Start to make home page look nicer

--- a/roulette/core/templates/core/index.html
+++ b/roulette/core/templates/core/index.html
@@ -2,7 +2,9 @@
 
 {% include "core/header.html" only %}
 
-<h1>Roulette</h1>
+<div class="jumbotron">
+    <h1 class="display-4">Roulette</h1>
+</div>
 
 <br>
 <br>
