Further update the home page

--- a/roulette/core/templates/core/index.html
+++ b/roulette/core/templates/core/index.html
@@ -2,19 +2,28 @@
 
 {% include "core/header.html" only %}
 
-<div class="jumbotron">
-    <h1 class="display-4">Roulette</h1>
-</div>
 
-<br>
-<br>
-<p> Coming soon...<br>
-User accounts<br>
-Validated submissions<br>
-Randomly generated project requirements<br>
-Nicer pages<br>
-Embedded GitHub views<br>
-And more!<br>
-</p>
+<div class="container">
+    <div class="row justify-content-center">
+        <div class="col">
+            <div class="jumbotron">
+                <h1 class="display-4">Roulette</h1>
+                <p class="lead">Mix and match languages and ideas to inspire and showcase projects.</p>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col">
+            <h3>Coming soon...</h3>
+            <ul>
+                <li>Validated submissions</li>
+                <li>Randomly generated project requirements</li>
+                <li>Nicer pages</li>
+                <li>Embedded GitHub views</li>
+                <li>And more!</li>
+            </ul>
+        </div>
+    </div>
+</div>
 
 {% include "core/footer.html" %}
