--- a/roulette/core/templates/core/project_detail.html
+++ b/roulette/core/templates/core/project_detail.html
@@ -2,45 +2,55 @@
 
 {% include 'core/header.html' only %}
 
-{% url 'core:projects' as projects %}
-{% url 'core:project-update' project.id as update %}
-{% url 'core:project-delete' project.id as delete %}
-{% bootstrap_button content='Projects' button_type='link' button_class='btn-primary' href=projects %}
-{% bootstrap_button content='Update' button_type='link' button_class='btn-primary' href=update %}
-{% bootstrap_button content='Delete' button_type='link' button_class='btn-primary' href=delete %}
-
-<br>
-
 <div class="container">
     <div class="row">
         <div class="col">
-            <a href={% url 'core:idea' project.idea.id %}>
-                {% if project.idea.thumbnail %}
-                <img src="{{ project.idea.thumbnail.url }}" alt="thumb" height="500" width="500" class="rounded">
-                {% else %}
-                <font size="400">{{ project.idea.name }}</font>
-                {% endif %}
-            </a>
-        </div>
-        <div class="col-1">
-            <font size="400">+</font>
-        </div>
-        <div class="col">
-            <a href={% url 'core:language' project.language.id %}>
-                {% if project.language.thumbnail %}
-                <img src="{{ project.language.thumbnail.url }}" alt="thumb" height="500" width="500" class="rounded">
-                {% else %}
-                <font size="400">{{ project.language.name }}</font>
-                {% endif %}
-            </a>
+            <div class="jumbotron">
+                <div class="container">
+                    <div class="row align-items-center">
+                        <div class="col">
+                            <a href="{% url 'core:idea' project.idea.id %}">
+                                {% if project.idea.thumbnail %}
+                                <img src="{{ project.idea.thumbnail.url }}" alt="thumb" class="rounded img-fluid">
+                                {% else %}
+                                <h1>{{ project.idea.name }}</h1>
+                                {% endif %}
+                            </a>
+                        </div>
+                        <div class="col-1">
+                            <h1>+</h1>
+                        </div>
+                        <div class="col">
+                            <a href="{% url 'core:language' project.language.id %}">
+                                {% if project.language.thumbnail %}
+                                <img src="{{ project.language.thumbnail.url }}" alt="thumb" class="rounded img-fluid">
+                                {% else %}
+                                <h1>{{ project.language.name }}</h1>
+                                {% endif %}
+                            </a>
+                        </div>
+                    </div>
+                    <div class="row justify-content-center">
+                        <div class="col-md-auto">
+                            <h1 class="display-4">{{ project.name }}</h1>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col">
+                            <p>{{ project.description }}</p>
+                        </div>
+                    </div>
+                    {% if project.github_url %}
+                    <div class="row">
+                        <div class="col">
+                            <a href="{{ project.github_url }}">GitHub</a>
+                        </div>
+                    </div>
+                    {% endif %}
+                </div>
+            </div>
         </div>
     </div>
 </div>
-
-<h1>{{ project.name }}</h1>
-
-<p>{{ project.description }}</p>
-
-<a href={{ project.github_url }}>GitHub</a>
 
 {% include 'core/footer.html' %}
