--- a/roulette/core/templates/core/project_list.html
+++ b/roulette/core/templates/core/project_list.html
@@ -2,17 +2,16 @@
 
 {% include 'core/header.html' with page='projects' only %}
 
-{% url 'core:index' as home %}
-{% url 'core:project-add' as add %}
-{% bootstrap_button content='Home' button_type='link' button_class='btn-primary' href=home %}
-{% bootstrap_button content='Add' button_type='link' button_class='btn-primary' href=add %}
-
-<div class="list-group">
-{% for project in project_list %}
-    <a class="list-group-item" href="{% url 'core:project' project.id %}"/>{% if project.thumbnail %}<img src="{{ project.thumbnail.url }}" alt="thumb" height="100" width="100" class="img-thumbnail">{% endif %} {{ project.name }}</a>
-{% empty %}
-    <div>No projects.</div>
-{% endfor %}
+<div class="container">
+    {% for project in project_list %}
+    <div class="row justify-content-center">
+        <div class="col">
+            <a class="list-group-item" href="{% url 'core:project' project.id %}"/>{% if project.thumbnail %}<img src="{{ project.thumbnail.url }}" alt="thumb" height="100" width="100" class="img-thumbnail">{% endif %} {{ project.name }}</a>
+        </div>
+    </div>
+    {% empty %}
+    <h1>No projects.</h1>
+    {% endfor %}
 </div>
 
 {% include 'core/footer.html' %}
