Update what's to come

--- a/roulette/core/templates/core/index.html
+++ b/roulette/core/templates/core/index.html
@@ -16,9 +16,9 @@
         <div class="col">
             <h3>Coming soon...</h3>
             <ul>
-                <li>Validated submissions</li>
+                <li>User accounts</li>
+                <li>Verified submissions</li>
                 <li>Randomly generated project requirements</li>
-                <li>Nicer pages</li>
                 <li>Embedded GitHub views</li>
                 <li>And more!</li>
             </ul>
